--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href=""><p>props</p></a>
         </div>
         <div class="menu">
-          <ul class="d-flex">
+          <ul class="">
             <a href=""><li>home</li></a>
             <a href=""><li>properties</li></a>
             <a href=""><li>services</li></a>
