--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
       </nav>
       <div class="slogan">
         <h1>FIND A PERFECT DREAM HOUSE</h1>
-        <input
-          type="text"
-          placeholder="Your ZIP code or City. e.g. New York"
-          class="search-box"
-        />
-        <input type="submit" value="Search" class="search-button" />
+        <form
+          action="#"
+          class="narrow-w d-flex "
+          data-aos="fade-up"
+          data-aos-delay="200"
+        >
+          <input
+            type="text"
+            placeholder="Your ZIP code or City. e.g. New York"
+            class="search-box"
+          />
+          <input type="submit" value="Search" class="search-button" />
+        </form>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam enim
           pariatur similique debitis vel nisi qui reprehenderit totam? Quod
