icons in menu changed with after

--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
             <ul class="d-grid">
               <li><a href="">menu</a></li>
               <li>
-                <a href=""> properties <i class='fa fa-chevron-down'></i></a>
+                <a href="" class="property"> properties</a>
                 <ul class="drop-down">
                   <li class="item buy"><a href="#">buy property</a></li>
                   <li class="item sell"><a href="#">sell property</a></li>
-                  <li class="item drop-down2"><a href="#">drop down</a></li>
+                  <li class="item " id="drop-down2"><a href="#">drop down</a>
+                    <ul class="drop-down-2">
+                      <li class="item buy"><a href="#">sub one</a></li>
+                      <li class="item sell"><a href="#">sub two</a></li>
+                      <li class="item drop-down2"><a href="#">sub three</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
 
