testimonial section created

--- a/index.html
+++ b/index.html
@@ -160,6 +160,47 @@
           </div>
         </div>
       </section>
+      <!-- Testimonial Section -->
+      <section class="testimonial">
+        <div class="container">
+          <h2>testimonials</h2>
+          <div class="comments dFlex justifyBetween">
+            <div class="comment1">
+              <img src="./assets/images/person_1.jpg" alt="" />
+              <h3>david smith</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellat aspernatur pariatur quia nostrum sunt! Incidunt quo
+                eligendi autem odit provident dolores sint cumque, molestiae
+                iusto pariatur aperiam necessitatibus libero corrupti?
+              </p>
+              <p class="job">designer,co-founder</p>
+            </div>
+            <div class="comment2">
+              <img src="./assets/images/person_2.jpg" alt="" />
+              <h3>james smith</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellat aspernatur pariatur quia nostrum sunt! Incidunt quo
+                eligendi autem odit provident dolores sint cumque, molestiae
+                iusto pariatur aperiam necessitatibus libero corrupti?
+              </p>
+              <p class="job">designer,co-founder</p>
+            </div>
+            <div class="comment3">
+              <img src="./assets/images/person_4.jpg" alt="" />
+              <h3>synthia cameron</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellat aspernatur pariatur quia nostrum sunt! Incidunt quo
+                eligendi autem odit provident dolores sint cumque, molestiae
+                iusto pariatur aperiam necessitatibus libero corrupti?
+              </p>
+              <p class="job">designer,co-founder</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
