Dream Home Section Created

--- a/index.html
+++ b/index.html
@@ -201,6 +201,59 @@
           </div>
         </div>
       </section>
+      <!-- dream homes section -->
+      <section class="dreamHomes">
+        <div class="container">
+          <div class="dreamHomesHeader dFlex justifyCenter alignCenter">
+            <h2>we bring dream homes to reality</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit
+              impedit nisi magni earum itaque blanditiis accusantium fugit ullam
+              officia placeat!
+            </p>
+          </div>
+          <div class="dreamHomesMain dFlex justifyBetween">
+            <div class="dreamHomesPicture">
+              <img src="./assets/images/hero_2.jpg" alt="" />
+            </div>
+            <div class="dreamHomeFeatures">
+              <div class="dreamBox1 dFlex alignCenter">
+                <div class="dFlex justifyCenter alignCenter content">
+                  <i class="fa fa-home"></i>
+                </div>
+                <div>
+                  <h3>quality properties</h3>
+                  <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+              </div>
+              <div class="dreamBox2 dFlex alignCenter">
+                <div class="dFlex justifyCenter alignCenter content">
+                  <i class="fa fa-user"></i>
+                </div>
+                <div>
+                  <h3>top rated agents</h3>
+                  <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+              </div>
+              <div class="dreamBox3 dFlex alignCenter">
+                <div class="dFlex justifyCenter alignCenter content">
+                  <i class="fa fa-shield-halved"></i>
+                </div>
+                <div>
+                  <h3>easy and safe</h3>
+                  <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="numbers dGrid">
+            <div class="number1"><p>2,197</p><span>buy properties</span></div>
+            <div class="number2"><p>3,918</p><span> sell properties</span></div>
+            <div class="number3"><p>3,928</p><span>all properties </span></div>
+            <div class="number4"><p>1,291</p><span>agents</span></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
