footer and contact us page created

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- menu -->
         <div class="menu">
           <ul class="dGrid">
-            <li><a href="">menu</a></li>
+            <li><a href="">home</a></li>
             <li>
               <a href="" class="property"> properties</a>
               <!-- dropdwonmenu -->
@@ -50,7 +50,7 @@
 
             <li><a href="">about</a></li>
 
-            <li><a href="">contact us</a></li>
+            <li><a href="ContactUs.html">contact us</a></li>
           </ul>
         </div>
       </nav>
@@ -322,15 +322,95 @@
             </div>
             <div class="agentSocial dFlex">
               <div class="agentSocial1"><i class="bx bxl-twitter"></i></div>
-                <div class="agentSocial2"><i class="bx bxl-instagram"></i></div>
-                <div class="agentSocial3"><i class="bx bxl-facebook"></i></div>
-                <div class="agentSocial4"><i class="bx bxl-linkedin"></i></div>
+              <div class="agentSocial2"><i class="bx bxl-instagram"></i></div>
+              <div class="agentSocial3"><i class="bx bxl-facebook"></i></div>
+              <div class="agentSocial4"><i class="bx bxl-linkedin"></i></div>
             </div>
           </div>
         </div>
       </div>
     </section>
   </main>
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="footerSlogan dFlex alignCenter justifyBetween">
+        <h3>be a part of our growing real state agent</h3><a href="#">apply for real state agent</a>
+      </div>
+      <div class="footerElements dGrid">
+        <!-- footer contact -->
+        <div class="contactElement">
+          <h3>Contact</h3>
+          <address>43 Raymouth Rd. Baltemoer, London 3910</address>
+          <ul>
+            <li>
+              <a href="#">+1(123)-456-7890</a>
+            </li>
+            <li>
+              <a href="">+1(123)-456-7890</a>
+            </li>
+            <li>
+              <a href="">info@mydomain.com</a>
+            </li>
+          </ul>
+        </div>
+        <!-- footer sources -->
+        <div class="sources">
+          <div class="sourcesElement">
+            <h3>Sources</h3>
+            <div class="elements dFlex ">
+              <div class="element1">
+                <ul>
+                  <li>About us</li>
+                  <li>Services</li>
+                  <li>Vision</li>
+                  <li>Mission</li>
+                  <li>Terms</li>
+                  <li>Privacy</li>
+                </ul>
+              </div>
+              <div class="element2">
+                <ul>
+                  <li>Partners</li>
+                  <li>Careers</li>
+                  <li>Blog</li>
+                  <li>Business</li>
+                  <li>FAQ</li>
+                  <li>Creative</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- footer links -->
+        <div class="links">
+          <div class="linkElement">
+            <h3>Links</h3>
+            <div class="elements1 dFlex">
+              <div class="element3">
+                <ul>
+                  <li><a href="">Our Vision</a></li>
+                  <li><a href="">About us</a></li>
+                  <li><a href="">Contact us</a></li>
+                </ul>
+              </div>
+              <div class="element4 dFlex ">
+                <div class="socialLink linkSocial1"><i class="bx bxl-twitter"></i></div>
+              <div class="socialLink linkSocial2"><i class="bx bxl-instagram"></i></div>
+              <div class="socialLink linkSocial3"><i class="bx bxl-facebook"></i></div>
+              <div class="socialLink linkSocial4"><i class="bx bxl-linkedin"></i></div>
+              <div class="socialLink linkSocial5"><i class="bx bxl-pinterest"></i></div>
+              <div class="socialLink linkSocial6"><i class="bx bxl-dribbble"></i></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- copyright -->
+      <div class="copyright"><p>Copyright ©2023 All rights reserved | This template is made
+        with<i class="bx bxs-heart"></i>by Colorlib</p></div>
+    </div>
+  </footer>
 </body>
 
 </html>
