--- a/ContactUs.html
+++ b/ContactUs.html
@@ -7,6 +7,7 @@
     <title>Contact us</title>
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/ContactUs.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
       <!-- cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
   integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -64,6 +65,7 @@
             <li> <a href="#">Home</a> </li>
             <li> <a href="#">About</a> </li>
             <li> <a href="#">Contact</a> </li>
+            <li> <a href="#">Services</a> </li>
           </ul>
         </label>
       </div>
