--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <li> <a href="#">Home</a> </li>
             <li> <a href="#">About</a> </li>
             <li> <a href="#">Contact</a> </li>
+            <li> <a href="#">Services</a> </li>
           </ul>
         </label>
       </div>
