--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
   <!-- css link -->
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="stylesheet" href="./assets/css/responsive.css" />
   <!-- cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -55,7 +54,7 @@
         </div>
       </nav>
       <!-- Slogan -->
-      <div class="slogan dGrid justifyCenter">
+      <div class="slogan dGrid justifyCenter alignCenter">
         <h1>FIND A PERFECT DREAM HOUSE</h1>
         <form action="">
           <input type="text" name="" id="" placeholder="Your ZIP code or City. e.g. New York" />
@@ -74,9 +73,9 @@
           <input type="checkbox">
           <span class="toggleMenu"> <span class="hamburger"></span> </span>
           <ul>
-            <li> <a href="#">Home</a> </li>
+            <li> <a href="index.html">Home</a> </li>
             <li> <a href="#">About</a> </li>
-            <li> <a href="#">Contact</a> </li>
+            <li> <a href="ContactUs.html">Contact</a> </li>
             <li> <a href="#">Services</a> </li>
           </ul>
         </label>
@@ -338,7 +337,7 @@
       <div class="footerSlogan dFlex alignCenter justifyBetween">
         <h3>be a part of our growing real state agent</h3><a href="#">apply for real state agent</a>
       </div>
-      <div class="footerElements dGrid">
+      <div class="footerElements dFlex">
         <!-- footer contact -->
         <div class="contactElement">
           <h3>Contact</h3>
